--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -119,6 +119,7 @@
 @import 'components/step-item';
 @import 'components/stat-block';
 @import 'components/steps';
+@import 'components/streamfield';
 @import 'components/student-listing';
 @import 'components/tabs';
 @import 'components/tab-item';
