--- a/rca/project_styleguide/templates/patterns/_pattern_library_only/streamfield/event_streamfield.html
+++ b/rca/project_styleguide/templates/patterns/_pattern_library_only/streamfield/event_streamfield.html
@@ -1,10 +1,4 @@
-{% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
+
 {% include "patterns/molecules/streamfield/blocks/image_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/anchor_heading_block.html" with value="Article one" %}
-{% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/anchor_heading_block.html" with value="Article two"  %}
-{% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
-{% include "patterns/molecules/streamfield/blocks/quote_block.html" %}
+{% include "patterns/molecules/streamfield/blocks/heading_block.html" with value="Just dreaming…" %}
 {% include "patterns/molecules/streamfield/blocks/richtext_block.html" %}
