--- a/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
@@ -4,6 +4,7 @@
             <h2 class="index-module__heading heading heading--two {% if anchor_heading %}anchor-heading{% endif %}" {% if anchor_heading %} id="{{ id|slugify }}"{% endif %}>{{ title }}</h2>
         </div>
         <div class="index-module__content">
+            {% if introduction %}<p class="index-module__introduction body body--one">{{ introduction }}</p>{% endif %}
             {% for item in items %}
                 {% include "patterns/molecules/card/card.html" with modifier="simple" card=item %}
             {% endfor %}
