--- a/rca/static_src/sass/components/_booking-bar.scss
+++ b/rca/static_src/sass/components/_booking-bar.scss
@@ -73,7 +73,7 @@
     }
 
     // Place on last item on the page, to compensate for transform on actual item
-    &__last-item {
+    &-last-item {
         margin-bottom: -$booking-bar-height-small;
         padding-bottom: ($gutter * 2);
 
@@ -100,6 +100,12 @@
                 @include media-query(large) {
                     grid-column: 4 / span 1;
                 }
+            }
+        }
+
+        &-last-item {
+            @include media-query(large) {
+                padding-bottom: ($gutter * 8);
             }
         }
     }
