--- a/rca/static_src/sass/components/_index-module.scss
+++ b/rca/static_src/sass/components/_index-module.scss
@@ -1,4 +1,6 @@
 .index-module {
+    $root: &;
+
     &__header {
         margin-right: $gutter;
         grid-column: 1 / span 2;
@@ -19,6 +21,14 @@
         }
     }
 
+    &__introduction {
+        margin-bottom: $gutter;
+
+        @include media-query(large) {
+            margin-bottom: ($gutter * 3);
+        }
+    }
+
     &__content {
         grid-column: 1 / span 2;
 
@@ -28,6 +38,16 @@
 
         @include media-query(large) {
             grid-column: 3 / span 2;
+        }
+    }
+
+    .in-series & {
+        #{$root}__heading {
+            @include media-query(large) {
+                margin-right: (
+                    $gutter * 2
+                ); // Make "series" move onto the next line
+            }
         }
     }
 }
