add styling to new key details link and update yaml data

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -58,7 +58,7 @@
                     {% endif %}
                     {% if programme_school %}
                        <li class="key-details__list-item">
-                            <a href="{% pageurl programme_school %}">{{ programme_school.title }}</a>
+                            <a href="{% pageurl programme_school %}" class="link link--tertiary">{{ programme_school.title }}</a>
                         </li>
                     {% endif %}
                 </ul>
