--- a/rca/static_src/sass/components/_video-modal.scss
+++ b/rca/static_src/sass/components/_video-modal.scss
@@ -9,12 +9,16 @@
     background-color: $color--black-80;
     opacity: 0;
     pointer-events: none;
-    transition: opacity $transition;
+    visibility: hidden;
+    transition: visibility 0s, opacity $transition, transform $transition;
 
     &.is-open {
         opacity: 1;
         pointer-events: auto;
         cursor: default;
+        visibility: visible;
+        transition: visibility 0s, opacity $transition,
+            transform $transition;
     }
 
     &__container {
