--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
@@ -41,12 +41,12 @@
 
                 <div class="section__row {% if not page.introduction_image %}section__row--last{% endif %} grid">
 
-                    <div class="layout__start-one layout__span-two layout__@large-span-one {% if not page.introduction_image %}u-small-and-medium-bp-only{% endif %}">
+                    <div class="key-details key-details--small-secondary layout__start-one layout__span-two layout__@large-span-one {% if not page.introduction_image %}u-small-and-medium-bp-only{% endif %}">
                         {% include "patterns/molecules/key-details/key-details--editorial.html" %}
                     </div>
 
                     {% if page.introduction %}
-                        <div class="intro-and-video layout__start-one layout__span-two layout__@large-start-two  layout__@large-span-three">
+                        <div class="intro-and-video intro-and-video--small-primary layout__start-one layout__span-two layout__@large-start-two  layout__@large-span-three">
 
                             <div class="introduction introduction--narrow">
                                 <div class="introduction__container">
@@ -69,7 +69,7 @@
                         </div>
                     {% endif %}
 
-                    <div class="share layout__start-one layout__span-two layout__@large-start-five layout__@large-span-one">
+                    <div class="share share--small-tertiary layout__start-one layout__span-two layout__@large-start-five layout__@large-span-one">
                         {% include "patterns/molecules/share/share.html" %}
                     </div>
 
