--- a/rca/static_src/sass/components/_share.scss
+++ b/rca/static_src/sass/components/_share.scss
@@ -1,4 +1,13 @@
 .share {
+    // Make sure this is the 3rd thing on mobile screens
+    &--small-tertiary {
+        order: 3;
+
+        @include media-query(medium) {
+            order: initial;
+        }
+    }
+
     &__heading {
         margin-bottom: $gutter;
     }
