--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -65,6 +65,7 @@
 @import 'components/image-caption-link';
 @import 'components/image-info';
 @import 'components/introduction';
+@import 'components/intro-and-video';
 @import 'components/key-details';
 @import 'components/link';
 @import 'components/logo';
