Adding bottom margin to share widget

--- a/rca/static_src/sass/components/_share.scss
+++ b/rca/static_src/sass/components/_share.scss
@@ -1,4 +1,6 @@
 .share {
+    margin-bottom: ($gutter * 2);
+
     // Make sure this is the 3rd thing on mobile screens
     &--small-tertiary {
         order: 3;
