rel="noopener noreferrer"

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
@@ -106,7 +106,7 @@
                 {% endif %}
                 {% if page.add_to_calendar %}
                 <li class="key-details__list-item">
-                    <a href="#" class="link link--tertiary link--link link--external" target="_blank">
+                    <a href="#" class="link link--tertiary link--link link--external" target="_blank" rel="noopener noreferrer">
                         <span class="link__label">Add to calendar</span>
                         <svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg>
                     </a>
