Removing url from share text

--- a/rca/project_styleguide/templates/patterns/molecules/share/share.html
+++ b/rca/project_styleguide/templates/patterns/molecules/share/share.html
@@ -47,7 +47,7 @@
                         <svg class="share-item__icon" width="24" height="24">
                             <use xlink:href="#whatsapp"></use>
                         </svg>
-                        <div class="share-item__label">Whatsapp {{ page.full_url|urlencode }}</div>
+                        <div class="share-item__label">Whatsapp</div>
                     </a>
                 </div>
 
