Adding structured data

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -12,17 +12,13 @@
         {% include "patterns/molecules/hero/hero.html" with modifier="medium" %}
     {% endif %}
 
-    <div class="page {% if hero_image %}page--overlap{% else %}page--no-hero{% endif %}" typeof="schema:Event">
+    <div class="page {% if hero_image %}page--overlap{% else %}page--no-hero{% endif %}">
 
         {% if hero_image %}
             <div class="page__notch grid">
                 <div class="page__notch-block bg bg--dark"></div>
             </div>
         {% endif %}
-
-        <meta property="schema:organizer" content="Royal College of Art" />
-        <meta property="schema:url" content="{{ page.full_url }}" />
-        {% if hero_image %}{% image hero_image fill-1440x530 as image_large %}<meta property="schema:image" content="{{ image_large.url }}" />{% endif %}
 
         <header class="page__header bg bg--dark">
             <div class="title-area title-area--event grid">
@@ -31,10 +27,10 @@
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" %}
                     </nav>
                     {% if page.title %}
-                        <h1 class="title-area__heading heading heading--display-two" property="schema:name">{{ page.title }}</h1>
+                        <h1 class="title-area__heading heading heading--display-two">{{ page.title }}</h1>
                     {% endif %}
                     {% if page.event_date %}
-                        <h2 class="title-area__meta heading heading--five">{% if page.past %}This event took place on {% endif %}<span property="schema:startDate">{{ page.event_date|date:'d F Y' }}</span></h2>
+                        <h2 class="title-area__meta heading heading--five">{% if page.past %}This event took place on {% endif %}{{ page.event_date|date:'d F Y' }}</h2>
                     {% endif %}
                 </div>
                 {% if hero_image_credit or hero_image %}
@@ -70,7 +66,7 @@
                         {% if page.introduction %}
                             <div class="introduction">
                                 <div class="introduction__container">
-                                    <div class="introduction__text heading heading--five" property="schema:description">
+                                    <div class="introduction__text heading heading--five">
                                         {{ page.introduction|richtext }}
                                     </div>
                                 </div>
@@ -148,6 +144,8 @@
             {% endif %}
 
             <section class="section bg bg--dark">
+
+                here: {{ page.location }}
                 {% if page.series.items %}
                     <div class="in-series section__row section__row--first {% if not related_pages.items %}section__row--last-large{% endif %}">
                         {% include "patterns/organisms/index-module/index-module.html" with items=page.series.items title="In the series" introduction=page.series.introduction %}
@@ -169,6 +167,40 @@
 
         </div>
 
+
+
     </div>
+
+    {% image hero_image fill-1440x530 as image_large %}
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Event",
+            "name": "{{ page.title }}",
+            "startDate": "{{ page.event_startDate|date:'c' }}",
+            "endDate": "{{ page.event_endDate|date:'c' }}",
+            "eventStatus": "https://schema.org/EventScheduled",
+            "eventAttendanceMode": "https://schema.org/OnlineEventAttendanceMode",
+            "location": {
+              {% if page.location == "Online" %}
+                "@type": "VirtualLocation",
+                "url": "{{ page.full_url }}"
+              {% else %}
+                "@type": "Place",
+                "name": "{{ page.location }}"
+                "streetAddress": "{{ page.location }}"
+              {% endif %}
+              },
+            "image": "{{ image_large.url }}",
+            "description": "{{ page.introduction|striptags }}",
+            "organizer": {
+              "@type": "Organization",
+              "name": "Royal College of Art",
+              "url": "https://rca.ac.uk"
+            }
+
+          }
+        }
+    </script>
 
 {% endblock %}
