--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
@@ -105,7 +105,7 @@
                     </a>
                 </li>
                 {% endif %}
-                {% if page.add_to_calendar %}
+                {% if page.add_to_calendar and not page.past %}
                 <li class="key-details__list-item">
                     <a href="#" class="link link--tertiary link--link link--external" target="_blank" rel="noopener noreferrer">
                         <span class="link__label">Add to calendar</span>
