--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -222,6 +222,7 @@
     &__container {
         display: flex;
         flex-direction: column;
+        font-family: $font--primary;
 
         &:hover,
         &:focus {
@@ -282,11 +283,16 @@
         @include font-size(s);
         margin-bottom: ($gutter / 2);
         line-height: $line-height-large;
+
+        #{$root}__link & {
+            font-family: $font--secondary;
+        }
     }
 
     &__heading-link {
         @include underline-hover-target();
         position: relative;
+        font-family: $font--secondary;
     }
 
     &__description {
