removal of href in taxonomy page

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
@@ -34,7 +34,7 @@
             <ul class="key-details__list">
                 {% for item in taxonomy_tags %}
                     <li class="key-details__list-item">
-                        <a class="link link--tertiary" href="{{ item.href }}">{{ item.title }}</a>
+                        <a class="link link--tertiary">{{ item.title }}</a>
                     </li>
                 {% endfor %}
             </ul>
