--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags util_tags %}
+{% load wagtailcore_tags util_tags reading_time_tags %}
 
 <div class="key-details key-details--no-border">
 
@@ -45,7 +45,8 @@
         <h3 class="body body--two key-details__sub-heading">Read time</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">
-                {{ page.read_time }}
+                {% get_reading_time_minutes page 'body' as reading_time_minutes %}
+                {{ reading_time_minutes }} minute read
             </li>
         </ul>
     </div>
