[875] add event type taxonomy

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
@@ -62,12 +62,12 @@
         </div>
     {% endif %}
 
-    {% if page.type %}
+    {% if page.event_type %}
     <div class="key-details__section key-details__section--location">
         <h3 class="body body--two key-details__sub-heading">Type</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">
-                {{ page.type }}
+                {{ page.event_type }}
             </li>
         </ul>
     </div>
