--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -103,20 +103,20 @@
             </section>
             {% endif %}
 
-            {% if page.collaborators or page.inline_cta %}
+            {% if page.partners or page.inline_cta %}
             <section class="section bg bg--light">
 
-                {% if page.collaborators %}
+                {% if page.partners %}
                     <div class="section__row {% if not page.speakers %}section__row--first{% endif %} section__row--last schools__about--logos">
                         <div class="section__header grid">
-                            <h2 class="section__heading section__heading--secondary heading heading--five">{% firstof page.collaborators_heading "Event partners" %}</h2>
+                            <h2 class="section__heading section__heading--secondary heading heading--five">{% firstof page.partners_heading "Event partners" %}</h2>
                         </div>
                         <div class="section__content">
                             <div class="u-small-and-medium-bp-only">
-                                {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.collaborators datatag="data-logo-carousel" per_slide=2 %}
+                                {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.partners datatag="data-logo-carousel" per_slide=2 %}
                             </div>
                             <div class="u-large-bp-only">
-                                {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.collaborators datatag="data-logo-carousel" per_slide=3 %}
+                                {% include "patterns/organisms/logo-carousel/logo-carousel.html" with carousel=page.partners datatag="data-logo-carousel" per_slide=3 %}
                             </div>
                         </div>
                     </div>
