[873] make event page introduction rich text

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -63,7 +63,7 @@
                             <div class="introduction">
                                 <div class="introduction__container">
                                     <div class="introduction__text heading heading--five">
-                                        {{ page.introduction }}
+                                        {{ page.introduction|richtext }}
                                     </div>
                                 </div>
                             </div>
