--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -11,7 +11,7 @@
         </div>
         {% if page.contact_model_email %}
             <a href="mailto:{{ page.contact_model_email }}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
-            <span class="link__label">Email us at<br>{{ page.contact_model_email }}</span>
+            <span class="link__label">{% firstof page.contact_model_link_text 'Email us at' %}<br>{{ page.contact_model_email }}</span>
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         {% elif page.contact_model_form %}
@@ -21,7 +21,7 @@
             </a>
         {% else %}
             <a href="{{ page.contact_model_url }}" class="contact__link link link--secondary link--link body body--two" rel="noopener">
-            <span class="link__label">Register your interest with us here</span>
+            <span class="link__label">{% firstof page.contact_model_link_text 'Register your interest with us here' %}</span>
             <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
             </a>
         {% endif %}
