--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
@@ -75,7 +75,7 @@
 
     {% if page.series.items %}
         <div class="key-details__section key-details__section--tags">
-            <h3 class="body body--two key-details__sub-heading">Series</h3>
+            <h3 class="body body--two key-details__sub-heading">Also in the series</h3>
             <ul class="key-details__list">
                 {% for item in page.series.items %}
                     <li class="key-details__list-item">
@@ -86,25 +86,9 @@
         </div>
     {% endif %}
 
-    <div class="key-details__section key-details__section--read-time">
-        <h3 class="body body--two key-details__sub-heading">Read time</h3>
-        <ul class="key-details__list">
-            <li class="key-details__list-item">
-                {{ page.read_time }}
-            </li>
-        </ul>
-    </div>
-
-    {% if page.add_to_calendar or page.schedule %}
+    {% if page.add_to_calendar %}
         <div class="key-details__section key-details__section--press-pack">
             <ul class="key-details__list">
-                {% if page.schedule %}
-                <li class="key-details__list-item">
-                    <a href="#" class="link link--tertiary">
-                        <span class="link__label">View schedule</span>
-                    </a>
-                </li>
-                {% endif %}
                 {% if page.add_to_calendar and not page.past %}
                 <li class="key-details__list-item">
                     <a href="#" class="link link--tertiary link--link link--external" target="_blank" rel="noopener noreferrer">
