add tap widget field home page

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -5,6 +5,8 @@
 
 {% block header_class %}theme-{{ hero_colour }}{% endblock %}
 
+{% block tap_widget %}{{ tap_widget }}{% endblock %}
+
 {% block content %}
 
     {% include "patterns/molecules/hero/hero--home.html" with modifier="home" scrolldown=true %}
