add tap widget programme pages

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -5,7 +5,7 @@
 
 {% block header_class %}theme-{{ hero_colour }}{% endblock %}
 
-{% block tap_widget %}{{ tap_widget }}{% endblock %}
+{% block tap_widget %}{{ tap_widget_code }}{% endblock %}
 
 {% block content %}
 
