--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -2,6 +2,8 @@
 {% load wagtailcore_tags wagtailimages_tags wagtailsettings_tags static %}
 {% get_settings %}
 
+{% block tap_widget %}{{ tap_widget_code }}{% endblock %}
+
 {% block content %}
 
 
