add tap widget to guide page

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -6,6 +6,8 @@
     app--guide no-hero
 {% endblock %}
 
+{% block tap_widget %}{{ tap_widget_code }}{% endblock %}
+
 {% block content %}
 
     <div class="page page--no-hero">
