add site wide settings for widgets and carousels

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -6,7 +6,9 @@
     app--guide no-hero
 {% endblock %}
 
-{% block tap_widget %}{{ tap_widget_code }}{% endblock %}
+{% block tap_widget %}
+{% if settings.utils.SitewideTapSetting.show_widgets %}{{ tap_widget_code }}{% endif %}
+{% endblock %}
 
 {% block content %}
 
