--- a/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news_api_content.html
@@ -1,4 +1,4 @@
-<div class="news">
+<div class="news {% if modifier %}{{ modifier }}{% endif %}">
     {% for item in news %}
 
         {% if forloop.first %}
@@ -16,8 +16,8 @@
         {% endif %}
 
         {% if forloop.last and not forloop.first %}
-                <a class="news__view-all link link--primary link--link body body--two" href="/news-and-events/">
-                    <span class="link__label">See all news & events</span>
+                <a class="news__view-all link link--primary link--link body body--two" href="{{ news_view_all.link|default:'/news-and-events/' }}">
+                    <span class="link__label">{{ news_view_all.title|default:'See all news & events' }}</span>
                     <svg class="link__icon" width="12" height="8"><use xlink:href="#arrow"></use></svg>
                 </a>
             </div>
