--- a/rca/static_src/sass/components/_card.scss
+++ b/rca/static_src/sass/components/_card.scss
@@ -462,8 +462,11 @@
         &:first-child {
             padding-top: $gutter;
 
-            @include media-query(large) {
+            @include media-query(medium) {
                 padding-top: 0;
+            }
+
+            @include media-query(large) {
                 padding-bottom: $gutter; // additional space for border
             }
         }
@@ -513,6 +516,18 @@
                     }
                 }
             }
+        }
+    }
+
+    .news--single-feature .news__sub-features & {
+        &:first-child {
+            @include media-query(large) {
+                padding-bottom: 0;
+            }
+        }
+
+        @include media-query(medium) {
+            grid-row: auto;
         }
     }
 
