--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -124,7 +124,7 @@
 
                 <div class="section__row">
                     {% if page.inline_cta %}
-                        <div class="section__row section__row--last">
+                        <div class="section__row section__row--last{% if not page.speakers and not page.partners %} section__row--first{% endif %}">
                             {% for block in page.inline_cta %}
                                 {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=block.value heading_size="small" %}
                             {% endfor %}
