new card—result for editorial listing

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.html
@@ -107,7 +107,7 @@
                     <div class="section__row section__row--first-small section__row--last-extra-small grid">
                         <h2 class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             <span class="results-total__anchor" id="results"></span>
-                            <span class="results-total__type">Results</span>
+                            <span class="results-total__type">News</span>
                         </h2>
                     </div>
                 {% endif %}
@@ -117,7 +117,7 @@
                         {% if results %}
                             {% for item in results %}
                                 <div class="results__item layout__span-two layout__@medium-span-one">
-                                    {% include "patterns/molecules/card/card--project.html" %}
+                                    {% include "patterns/molecules/card/card--result.html" %}
                                 </div>
                             {% endfor %}
                         {% else %}
