Making large CTA link orange when on dark backgrounds

--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -20,7 +20,7 @@
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
             </a>
         {% else %}
-            <a href="{{ page.contact_model_url }}" class="contact__link link link--secondary link--link body body--two" rel="noopener">
+            <a href="{{ page.contact_model_url }}" class="contact__link link link--primary link--link body body--two" rel="noopener">
             <span class="link__label">{% firstof page.contact_model_link_text 'Register your interest with us here' %}</span>
             <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
             </a>
