Hide editors picks if there are filters or pagination in the request

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_listing.html
@@ -91,7 +91,7 @@
 
             <section class="section bg bg--light" >
 
-                {% if featured_editorial  %}
+                {% if featured_editorial and show_picks %}
                     <div class="section__row section__row--first-small section__row--last-extra-small grid">
                         <h2 class="heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             Editor's pick
